--- a/index.html
+++ b/index.html
@@ -13,18 +13,25 @@
         
     </head>
     <body>
-        <img src="images/xmen.jpeg" alt="xmen">
+        <img src="images/marvel.jpeg" alt="marvel">
 
         <h1>JOURNEY INTO MARVEL</h1>
         <p>You know, if it wasn't for the existential terror of staring into a void of space, I'd say I'm feeling better today. The infection's run its course, Thanks to the blue meanie back there. You'd love her. Very practical. Only a tiny bit sadistic. Some fuel cells were cracked during battle, but we figured out a way to reverse the ion charge to buy ourselves about 48 hours of time.  Alright. So... five years ago, right before <a href="https://www.marvel.com">Thanos</a>, I was in a place called the Quantum Realm. The Quantum Realm is like its own microscopic universe. To get in there, you have to be incredibly small.  No, this was a gift. And you're going to be the man you're meant to be.  Look...It's not just the fact that that glove is channeling enough energy to light up a continent, I'm telling you, you're in no condition. </p>
         <div>
             <h2>FAVORITE COMIC BOOKS</h2>
             <ol>
-                <li>X-MEN</li>
-                <li>BLACK PANTHER</li>
-                <li>AVENGERS</li>
-                <li>Spider-man</li>
+                <li>X-men</li>
+                <li>Black Panther</li>
+                <li>Avengers</li>
+                <li>Fantastic Four</li>
             </ol>
+        </div>
+        <h2>THE HEROES</h2>
+        <div class="flex-container">
+            <img src="images/xmen.jpeg" alt="xmen">
+            <img src="images/avengers.jpeg" alt="avengers">
+            <img src="images/fantasticfour.jpeg" alt="f4">
+            <img src="images/blackpanther.jpeg" alt="wakanda">
         </div>
     </body>
 </html>
