Added new links

--- a/index2.html
+++ b/index2.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <ul>
-        <li>Comics</li>
-        <li>Trumpet</li>
-        <li>Fitness</li>
+        <li><a href="index.html">Comnics</a></li>
+        <li><a href="index2.html">Trumpet</a></li>
+        <li><a href="index3.html">Fitness</a></li>
     </ul>
     <link href="styles2.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Cookie&display=swap" rel="stylesheet">
