--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <ul>
-            <li>Comics</li>
-            <li>Trumpet</li>
-            <li>Fitness</li>
+            <li><a href="index.html">Comnics</a></li>
+            <li><a href="index2.html">Trumpet</a></li>
+            <li><a href="index3.html">Fitness</a></li>
         </ul>
         <meta charset="utf-8">
         <link href="styles.css" rel="stylesheet">
