Updated trumpet page

--- a/index2.html
+++ b/index2.html
@@ -21,5 +21,14 @@
           <li>Louie Armstrong</li>
           <li>Miles Davis</li>
       </ul>
+      <div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic beatae quo reprehenderit nam voluptatem odio, omnis esse placeat amet quisquam quos corrupti mollitia repellendus maiores quasi iste laboriosam soluta ut.</p>
+      </div>
+      <h2>Jazz Locales</h2>
+      <ul>
+          <li>New Orleans</li>
+          <li>Memphis</li>
+          <li>Atlanta</li>
+      </ul>
   </body>
 </html>
